test/compile-fail/identifier/path-segment-keyword/expected.txt
error: could not parse ./test/compile-fail/identifier/path-segment-keyword/top.rhdl: unexpected token
  ┌─ ./test/compile-fail/identifier/path-segment-keyword/top.rhdl:1:5
  │
1 │ mod r#self;
  │     ^^^^^^ expected any of ["NonKeywordIdentifier", "RawIdentifier"]

